# stream-bloat

./: README.md  index.html  package-lock.json  package.json
.github/worlflows/: publish.yaml
src/: App.css  App.tsx  persistentStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/titlebar/: settingsWindow.tsx  titlebar.tsx
